--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <title>Creative Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -1420,7 +1421,7 @@
     </script>
 
     <section class="hero-section">
-        <div class="hero-content">
+        <div class="hero-content" data-aos="fade-up">
             <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&auto=format&fit=crop&w=687&q=80"
                 alt="Profile" class="profile-image">
             <h1 class="hero-title">Creative Portfolio</h1>
@@ -1968,7 +1969,7 @@
                 }
             }
         </style>
-        <div class="newsletter-container">
+        <div class="newsletter-container" data-aos="zoom-in" data-aos-delay="100">
             <h2 class="newsletter-title">Subscribe to Our Newsletter</h2>
             <p class="newsletter-description">Stay updated with our latest projects, design tips, and industry insights.</p>
             <form class="newsletter-form">
@@ -1980,11 +1981,11 @@
 
     <section class="about-section" id="about">
         <div class="about-container">
-            <div class="about-image-container">
+            <div class="about-image-container" data-aos="fade-right" data-aos-delay="100">
                 <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
                     alt="Creative Workspace" class="about-image">
             </div>
-            <div class="about-content">
+            <div class="about-content" data-aos="fade-left" data-aos-delay="200">
                 <h2 class="about-subtitle">About Me</h2>
                 <h2 class="about-title">Creative Professional</h2>
                 <p class="about-description">I'm a passionate creative professional with over 8 years of experience in
@@ -2043,7 +2044,7 @@
         <div class="testimonials-container">
             <div class="testimonials-grid">
                 <!-- Testimonial 1 -->
-                <div class="testimonial-card">
+                <div class="testimonial-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="testimonial-content">
                         <div class="testimonial-author">
                             <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80"
@@ -2061,7 +2062,7 @@
                 </div>
 
                 <!-- Testimonial 2 -->
-                <div class="testimonial-card">
+                <div class="testimonial-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="testimonial-content">
                         <div class="testimonial-author">
                             <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80"
@@ -2079,7 +2080,7 @@
                 </div>
 
                 <!-- Testimonial 3 -->
-                <div class="testimonial-card">
+                <div class="testimonial-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="testimonial-content">
                         <div class="testimonial-author">
                             <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80"
@@ -2101,7 +2102,7 @@
 
     <section class="contact-section" id="contact">
         <div class="contact-container">
-            <div class="contact-info">
+            <div class="contact-info" data-aos="fade-right" data-aos-delay="100">
                 <h3 class="contact-subtitle">Get in Touch</h3>
                 <h2 class="contact-title">Let's Work Together</h2>
                 <p class="contact-description">Have a project in mind? Let's discuss how we can help bring your ideas to
@@ -2121,7 +2122,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="contact-form">
+            <div class="contact-form" data-aos="fade-left" data-aos-delay="200">
                 <form>
                     <div class="form-group">
                         <label class="form-label">Your Name</label>
@@ -2223,6 +2224,93 @@
         });
     </script>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        // Initialize AOS
+        AOS.init({
+            duration: 1000,
+            once: true,
+            offset: 100,
+            easing: 'ease-in-out'
+        });
+    </script>
+
+    <style>
+        /* Add smooth scrolling to the page */
+        html {
+            scroll-behavior: smooth;
+        }
+
+        /* Optional: Add a subtle transition to all elements */
+        * {
+            transition: background-color 0.3s, color 0.3s, transform 0.3s;
+        }
+
+        /* Enhance hover effects */
+        .project-box:hover {
+            transform: translateY(-10px) scale(1.02);
+        }
+
+        .nav-link:hover {
+            transform: translateY(-2px);
+        }
+
+        .contact-form button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Add floating animation to hero section */
+        @keyframes float {
+            0% {
+                transform: translateY(0px);
+            }
+            50% {
+                transform: translateY(-20px);
+            }
+            100% {
+                transform: translateY(0px);
+            }
+        }
+
+        .hero-content img {
+            animation: float 6s ease-in-out infinite;
+        }
+
+        /* Enhance scroll transition for header */
+        .header {
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .header.scrolled {
+            transform: translateY(-5px);
+        }
+
+        /* Add hover lift effect to cards */
+        .testimonial-card {
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .testimonial-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Smooth transition for project images */
+        .project-img img {
+            transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        /* Enhanced newsletter button animation */
+        .newsletter-button {
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .newsletter-button:hover {
+            transform: translateY(-3px) scale(1.05);
+            box-shadow: 0 10px 20px rgba(52, 152, 219, 0.3);
+        }
+    </style>
 </body>
 
 </html>
